webstore-demo/overlays/development/platform-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platform
spec:
  template:
    spec:
      containers:
        - name: platform
