webstore-demo/overlays/development/platform-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: platform
  annotations:
    service.beta.kubernetes.io/azure-dns-label-name: vc-webstore-dev-backoffice
