webstore-demo/overlays/development/storefront-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vc-storefront-web
  annotations:
    service.beta.kubernetes.io/azure-dns-label-name: vc-webstore-dev-store
