webstore-demo/overlays/development/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: webstore.dev.govirto.com
    http:
      paths:
      - backend:
          serviceName: storefront
          servicePort: 80
        path: /
  - host: webstore-platform.dev.govirto.com
    http:
      paths:
      - backend:
          serviceName: platform
          servicePort: 80
        path: /
